# cap-sample-data

./: MANIFEST.in  README.md  pyproject.toml  sample_data  setup.cfg  setup.py
AURN/: AURN_Site_Information.csv
aircraft/: MOCCA_M264_20200120.nc  aircraft_tmp.nc
cap-sample-data/: __init__.py
cap-sample-data/sample-data/aircraft/: MOCCA_M251_20190903.nc
cap-sample-data/sample-data/obs/: AH_2015.csv
cap-sample-data/sample-data/scalar/: aircraft_scalar.nc
cap-sample-data/sample-data/test_data/: form_response0.yaml
cap_sample_data/: __init__.py
cap_sample_data/sample_data/aircraft/: M285_sample.nc
cap_sample_data/sample_data/aircraft_tracks_multidim/: aircraft_so2_timeseries.nc
cap_sample_data/sample_data/metadata/: station_metadata.yaml
cap_sample_data/sample_data/model/: aqum_daily_daqi_mean.nc  aqum_hourly_pm10.nc  aqum_hourly_pm2p5.nc
cap_sample_data/sample_data/model_full/: aqum_daily_daqi_mean_20200520.nc  aqum_daily_daqi_mean_20200521.nc
cap_sample_data/sample_data/obs/: AH_2016.csv
cap_sample_data/sample_data/shapefiles/: CountiesMay2021_500mRes.geojson  NUTS_Level_1_boundries500mgjsn.geojson
cap_sample_data/sample_data/timeseries/: aircraft_o3_timeseries.nc  aqum_hourly_no2_timeseries.nc
model/: aqum_daily_daqi_mean.nc  aqum_hourly_no2.nc  aqum_hourly_o3.nc  aqum_hourly_pm10.nc  aqum_hourly_pm2p5.nc  aqum_hourly_so2.nc
obs/: ABD_2015.csv  ABD_2016.csv  ACTH_2015.csv
scalar/: aircraft_scalar.nc
shapefiles/: countriesDec2020_500mRes.geojson
test_data/: form_response0.yaml  metadata_form_responses.xlsx
timeseries/: aircraft_air_pressure_timeseries.nc  aircraft_timeseries.nc
