[project]
name = "cap-sample-data"
version = "0.1.0"
description = "This Python package provides test data for the MO Clean Air Project."
authors = [{name="Rachel McInnes", email="rachel.mcinnes@metoffice.gov.uk"},
        {name="Noel Nelson", email="noel.nelson@metoffice.gov.uk"},
        {name="Catherine Lucas", email="catherine.lucas@metoffice.gov.uk"},
        {name="Barnaby Sherratt", email="barnaby.sherratt@metoffice.gov.uk"},
        {name="Benjamin Drummond", email="benjamin.drummond@metoffice.gov.uk"},
        {name="Eleanor Smith", email="eleanor.smith@metoffice.gov.uk"},
        {name="Chris R Bunney", email="chris.r.bunney@metoffice.gov.uk"},
        {name="Corinne Bosley", email="corinne.bosley@metoffice.gov.uk"},
        {name="Thomas Wilson", email="thomas.wilson@metoffice.gov.uk"}]
#license = needs reviewing and merging
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/ADAQ-AQI/cap-sample-data"
documentation = "https://github.com/ADAQ-AQI/cap-sample-data#readme"

[build-system]
requires = ["setuptools >= 48.0", "wheel"]
build-backend = "setuptools.build_meta"
