[metadata]
name = cap_sample_data
version = 0.1.0

[options]
include_package_data = True
python_requires = >=3.7
install_requires =
  scitools-iris
  xarray
  pandas
  geopandas

packages = find:

[options.package_data]
* = *.nc, *.csv, *.yaml, *.xlsx

[options.packages.find]
include = cap_sample_data

[options.extras_require]
dev =
  pytest
  flake8

[flake8]
# Slightly more generous line length, as used by black
max-line-length = 88

# Enable all messages then filter some out
select = E,F,W,C
ignore =
  # "Missing whitespace around arithmetic operator"
  # May want to use spaces to emphasise precedence
  E226,

  # "Whitespace before :"
  # Although we do want this in dicts, we don't want it in slices, and
  # unfortunately flake8 cannot (currently) distinguish these cases
  E203,

  # Choose W504 not W503 (want binary operators to start a line, if wrapped)
  W503,

# Ignore "import not used" in __init__ files, to allow for re-exports
per-file-ignores = __init__.py:F401

