[metadata]
name = cap_sample_data
version = 0.1.0

[options]
include_package_data = True
python_requires = >=3.7

packages = find_namespace:
package_dir =
    = cap_sample_data

[options.package_data]
* = *.nc, *.csv, *.yaml, *.xlsx

[options.packages.find]
where = cap_sample_data
include = cap_sample_data


[options.extras_require]
dev = pytest
